# bench-julia-python

./: .gitignore  README.md  pixi.toml  pyproject.toml
.zed/: settings.json  tasks.json
cpp/: CMakeLists.txt
cpp/src/: monte_carlo_pi.cpp  nbody.cpp  rule110.cpp  simpson.cpp
docs/: language-comparison.md
julia/: monte_carlo_pi.jl  monte_carlo_pi_vectorized.jl  nbody.jl  rule110.jl  simpson.jl  simpson_vectorized.jl
python/: monte_carlo_pi.py  monte_carlo_pi_numba.py  monte_carlo_pi_numpy.py  nbody.py  nbody_numba.py  nbody_numpy.py  rule110.py  rule110_numba.py  rule110_numba_minimal.py  rule110_numpy.py  simpson.py  simpson_numba.py  simpson_numpy.py
rust/: Cargo.toml
rust/src/: monte_carlo_pi.rs  nbody.rs  rule110.rs  simpson.rs
